--- a/i18n/lt.po
+++ b/i18n/lt.po
@@ -2,26 +2,28 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2016-02-04 14:28+0100\n"
-"Last-Translator: David Lutz <kpanic@hirnduenger.de>\n"
-"Language-Team: English\n"
-"Language: en\n"
+"PO-Revision-Date: 2016-09-11 19:33+0200\n"
+"Last-Translator: Andrej Sidorenko <avita@hostega.eu>\n"
+"Language-Team: Lietuvių\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "gluon-config-mode:welcome"
 msgstr ""
-"Welcome to the setup wizard of your new Freifunk Duckburg node. "
-"Please fill out the following form and submit it."
+"Sveiki atvykę į savo naujo Kiwinet Šiauliai mazgo sąrankos vedlį. "
+"Prašome užpildyti ir patvirtinti šią formą."
 
 msgid "gluon-config-mode:pubkey"
 msgstr ""
-"<p>This is your Freifunk node's public key. The node won't be able to "
-"connect to the mesh VPN until the key has been registered on the Freifunk "
-"Duckburg servers. "
-"To register, send the key together with your node's name (<em><%=hostname%></em>) to "
-"<a href=\"mailto:keys@entenhausen.freifunk.net\">keys@entenhausen.freifunk.net</a>."
+"<p>Tai jūsų Kiwinet mazgo viešasis raktas. Mazgas negalės "
+"prisijungti prie mesh VPN, kol raktas nebus užregistruotas Kiwinet "
+"Šiauliai VPN serveryje. "
+"Norėdami užsiregistruoti, siųskite raktą kartu su savo mazgo vardu (<em><%=hostname%></em>) adresu "
+"<a href=\"mailto:keys@siauliai.kiwinet.eu?subject=Registracija:%20<%=hostname%>&amp;"
+"body=%23%20<%=hostname%>%0A%23%20<%=sysconfig.primary_mac%>%0Akey%20%22"
+"<%= pubkey %>%22%3B\">keys@siauliai.kiwinet.eu</a>."
 "</p>"
 "<div class=\"the-key\">"
 " # <%= hostname %>"
@@ -32,11 +34,11 @@ msgstr ""
 
 msgid "gluon-config-mode:reboot"
 msgstr ""
-"<p>The node is currently rebooting and will try to connect to other "
-"nearby Freifunk nodes after that. "
-"For more information on the Freifunk Duckburg community, have a look at "
-"<a href=\"https://entenhausen.freifunk.net/\">our homepage</a>.</p>"
-"<p>To get back to this configuration interface, press the reset button for "
-"3 seconds during normal operation. The device will then reboot into config "
-"mode.</p>"
-"<p>Have fun with your node and exploring of the Freifunk network!</p>"
+"<p>Mazgas šiuo metu persikrauna ir po to bandys prisijungti prie kitų, "
+"šalia ęsančių, Kiwinet mazgų. "
+"Daugiau informacijos apie Šiaulių Kiwinet bendruomenę rasite "
+"<a href=\"https://siauliai.kiwinet.eu/\">mūsų pagrindiniame puslapyje</a>.</p>"
+"<p>Jei norėsite grįžti prie šios konfigūracijos sąsajos, paspauskite ir 3 sekundės "
+"laikykite nuspausta reset mygtuką. Prietaisas persikraus į configuravimo "
+"režimą.</p>"
+"<p>Linkime smagių akimirkų naudojantis Jūsų naujoju Kiwinet tinklo magu!</p>"
