Vertimas i LT kalba

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -12,16 +12,18 @@ msgstr ""
 
 msgid "gluon-config-mode:welcome"
 msgstr ""
-"Welcome to the setup wizard of your new Freifunk Duckburg node. "
-"Please fill out the following form and submit it."
+"Sveiki atvykę į savo naujo Kiwinet Šiauliai mazgo sąrankos vedlį. "
+"Prašome užpildyti ir patvirtinti šią formą."
 
 msgid "gluon-config-mode:pubkey"
 msgstr ""
-"<p>This is your Freifunk node's public key. The node won't be able to "
-"connect to the mesh VPN until the key has been registered on the Freifunk "
-"Duckburg servers. "
-"To register, send the key together with your node's name (<em><%=hostname%></em>) to "
-"<a href=\"mailto:keys@entenhausen.freifunk.net\">keys@entenhausen.freifunk.net</a>."
+"<p>Tai jūsų Kiwinet mazgo viešasis raktas. Mazgas negalės " 
+"prisijungti prie Kiwinet mesh VPN serverio tol, kol raktas " 
+"nebus užregistruotas Kiwinet tinklo VPN serveryje. " 
+"Norėdami užregistruoti mazgą siųskite raktą kartu su savo mazgo vardu (<em><%=hostname%></em>) adresu " 
+"<a href=\"mailto:pagalba@kiwinet.eu?subject=Kiwinet mazgo registracija : %20<%=hostname%>&amp;" 
+"body=%23%20<%=hostname%>%0A%23%20<%=sysconfig.primary_mac%>%0Akey%20%22" 
+"<%= pubkey %>%22%3B\">pagalba@kiwinet.eu</a>." 
 "</p>"
 "<div class=\"the-key\">"
 " # <%= hostname %>"
@@ -32,11 +34,15 @@ msgstr ""
 
 msgid "gluon-config-mode:reboot"
 msgstr ""
-"<p>The node is currently rebooting and will try to connect to other "
-"nearby Freifunk nodes after that. "
-"For more information on the Freifunk Duckburg community, have a look at "
-"<a href=\"https://entenhausen.freifunk.net/\">our homepage</a>.</p>"
-"<p>To get back to this configuration interface, press the reset button for "
-"3 seconds during normal operation. The device will then reboot into config "
-"mode.</p>"
-"<p>Have fun with your node and exploring of the Freifunk network!</p>"
+"<p>Mazgas šiuo metu persikrauna ir po to bandys prisijungti prie kitų, " 
+"šalia ęsančių, Kiwinet tinklo mazgų ar/ar prie Kiwinet tinklo VPN serverio. " 
+"Daugiau informacijos apie Kiwinet tinklo bendruomenę rasite " 
+"<a href=\"https://wiki.kiwinet.eu/\">mūsų pagrindiniame wiki puslapyje</a>.</p>" 
+"<p>Jei norėsite grįžti prie šios konfigūracijos sąsajos, paspauskite ir 5 sekundės " 
+"laikykite nuspausta reset mygtuką. Prietaisas persikraus į configuravimo " 
+"režimą.</p>" 
+"<p>Kilus klausimams ar tinklo gedimui rašykite adresu "
+"<a href=\"mailto:pagalba@kiwinet.eu?subject=Kiwinet tinklo GEDIMO registracija : %20<%=hostname%>&amp;" 
+"body=%23%20<%=hostname%>%0A%23%20<%=sysconfig.primary_mac%>%0A%20" 
+"%3B\">pagalba@kiwinet.eu</a>."</p>" 
+"<p>Linkime smagių akimirkų naudojantis Kiwinet tinklu!</p>" 
