--- a/i18n/lt.po
+++ b/i18n/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2016-09-18 18:51+0300\n"
+"PO-Revision-Date: 2020-03-25 22:48+0200\n"
 "Last-Translator: Andrej Sidorenko <info@kiwinet.eu>\n"
 "Language-Team: Lithuanian\n"
 "Language: lt\n"
@@ -15,29 +15,83 @@ msgstr ""
 "Sveiki atvykę į savo naujo Kiwinet Šiauliai mazgo sąrankos vedlį. "
 "Prašome užpildyti ir patvirtinti šią formą."
 
+msgid "gluon-config-mode:domain"
+msgstr "Tinklo segmentas"
+
+msgid "gluon-config-mode:domain-select"
+msgstr ""
+"Čia galite pasirinkti tinklo segmentą, kuriame yra jūsų mazgas. "
+"Atminkite, kad jūsų maršrutizatorius jungiasi tik su mazgais "
+"kurie yra jūsų tinklo segmente."
+
 msgid "gluon-config-mode:pubkey"
 msgstr ""
 "<p>Tai jūsų Kiwinet mazgo viešasis raktas. Mazgas negalės "
 "prisijungti prie mesh VPN, kol raktas nebus užregistruotas Kiwinet "
-"Šiauliai VPN serveryje. "
-"Norėdami užsiregistruoti, siųskite raktą kartu su savo mazgo vardu (<em><%=hostname%></em>) adresu "
-"<a href=\"mailto:keys@siauliai.kiwinet.eu?subject=Registracija:%20<%=hostname%>&amp;"
-"body=%23%20<%=hostname%>%0A%23%20<%=sysconfig.primary_mac%>%0Akey%20%22"
-"<%= pubkey %>%22%3B\">keys@siauliai.kiwinet.eu</a>."
+"Tinklo serveryje. "
+"Norėdami užsiregistruoti, siųskite raktą kartu su savo mazgo vardu (<em><%=pcdata(hostname)%></em>) adresu "
+"<a href=\"mailto:keys@kiwinet.eu?subject=Registracija:%20<%=pcdata(hostname)%>&amp;"
+"body=%23%20<%=pcdata(hostname)%>%0A%23%20<%=pcdata(sysconfig.primary_mac)%>%0Akey%20%22"
+"<%=pcdata(pubkey)%>%22%3B\">keys@kiwinet.eu</a>."
 "</p>"
 "<div class=\"the-key\">"
-" # <%= hostname %>"
+" # <%=pcdata(hostname)%>"
 " <br/>"
-"<%= pubkey %>"
+"<%=pcdata(pubkey)%>"
 "</div>"
+"<p>Jūsų mazgas <em> <%=pcdata(hostname)%></em> bus paleistas iš naujo ir bandys "
+"prisijungti prie kitų netoliese esančių „KiwiNET" mazgų per WLAN ir prie VPN serverio "
+"per interneto ryšį.</p>"
+"<p>Nepamirškite prijungti tinklo kabelį į WAN prievadą. </p>"
+
+msgid "gluon-config-mode:novpn"
+msgstr ""
+"<p>Jūs pasirinkote <strong> nenaudoti </strong> ryšio per "KiwiNET" VPN serverį. "
+"Jūsų mazgas galės prisijungti prie „KiwiNET“ tinklo tik tuo atveju, jei "
+"netoliese bus kitų mazgų turinčių interneto ryšį ar prisijungusių prie kitų tinklo mazgų.</p> "
+"Prašome atsiųsti el. laišką su savo mazgo pavadinimu "
+"(<em><%=pcdata(hostname)%></em>) ir šiek tiek papildomos informacijos adresu "
+"<a href=\"mailto:keys@kiwinet.eu?subject="
+"<%= urlencode('Registracija: ' .. hostname) %>&amp;body="
+"<%= urlencode('# ' .. hostname .. '\n# ' .. sysconfig.primary_mac .. '\nkey ') %>"
+"%22<%= pubkey %>%22;"
+"<%= urlencode('\n\nAš noriu pranešti, kad kontaktas, kurį įvedžiau ') %>"
+"<%= urlencode('į mazgą yra viešai matomas internete ir gali būti ') %>"
+"<%= urlencode('naudojama bet kuria tinklo tarnyba (pvz. „meshviewer“ žemėlapis).') %>"
+"<%= urlencode('\n\nDėkoju, \n\n') %>"
+"\">keys@kiwinet.eu</a>. Žinoma, jūsų el. pašto adresas bus "
+"bus laikomas konfidencialiai ir nebus perduotas jokiai trečiai šaliai.</p>"
+"<p>Jūsų mazgas <em><%= pcdata(hostname) %></em> bus paleistas iš naujo ir bandys "
+"prisijungti prie kitų netoliese esančių „KiwiNET" mazgų per WLAN .</p>"
 
 msgid "gluon-config-mode:reboot"
 msgstr ""
 "<p>Mazgas šiuo metu persikrauna ir po to bandys prisijungti prie kitų, "
-"šalia ęsančių, Kiwinet mazgų. "
-"Daugiau informacijos apie Šiaulių Kiwinet bendruomenę rasite "
-"<a href=\"https://siauliai.kiwinet.eu/\">mūsų pagrindiniame puslapyje</a>.</p>"
-"<p>Jei norėsite grįžti prie šios konfigūracijos sąsajos, paspauskite ir 3 sekundės "
-"laikykite nuspausta reset mygtuką. Prietaisas persikraus į configuravimo "
+"šalia ęsančių "KiwiNET" tinklo mazgų. "
+"Daugiau informacijos apie "KiwiNET" bendruomenę rasite "
+"<a href=\"https://www.kiwinet.eu/\">mūsų pagrindiniame puslapyje www.kiwinet.eu</a>.</p>"
+"<p>Jei norėsite grįžti prie šios konfigūracijos sąsajos, paspauskite ir 10 sekundžių "
+"laikykite nuspausta reset mygtuką. Mazgas persikraus į configuravimo "
 "režimą.</p>"
-"<p>Linkime smagių akimirkų naudojantis Jūsų naujoju Kiwinet tinklo mazgu!</p>"
+"<p>Linkime smagių akimirkų naudojantis Jūsų naujoju "KiwiNET" tinklo mazgu!</p>"
+
+# Leave empty to use the default text, which can be found in:
+# package/gluon-config-mode-hostname/i18n/
+msgid "gluon-config-mode:hostname-help"
+msgstr ""
+
+# Leave empty to use the default text, which can be found in:
+# package/gluon-config-mode-geo-location/i18n/
+msgid "gluon-config-mode:geo-location-help"
+msgstr ""
+
+msgid "gluon-config-mode:altitude-label"
+msgstr ""
+
+# Leave empty to use the default text, which can be found in:
+# package/gluon-config-mode-contact-info/i18n/
+msgid "gluon-config-mode:contact-help"
+msgstr ""
+
+msgid "gluon-config-mode:contact-note"
+msgstr ""
