--- a/i18n/en.po
+++ b/i18n/en.po
@@ -12,37 +12,91 @@ msgstr ""
 
 msgid "gluon-config-mode:welcome"
 msgstr ""
-"Sveiki atvykę į savo naujo Kiwinet Šiauliai mazgo sąrankos vedlį. "
-"Prašome užpildyti ir patvirtinti šią formą."
+"Welcome to the setup wizard of your new Freifunk Alpha Centauri node. Please "
+"fill out the following form and submit it."
+
+msgid "gluon-config-mode:domain"
+msgstr "Domain"
+
+msgid "gluon-config-mode:domain-select"
+msgstr ""
+"Here you have the possibility of selecting the mesh domain in which your node "
+"is placed. Please keep in mind that your router only connects with the nodes "
+"of the selected domain."
 
 msgid "gluon-config-mode:pubkey"
 msgstr ""
-"<p>Tai jūsų Kiwinet mazgo viešasis raktas. Mazgas negalės " 
-"prisijungti prie Kiwinet mesh VPN serverio tol, kol raktas " 
-"nebus užregistruotas Kiwinet tinklo VPN serveryje. " 
-"Norėdami užregistruoti mazgą siųskite raktą kartu su savo mazgo vardu (<em><%=hostname%></em>) adresu " 
-"<a href=\"mailto:pagalba@kiwinet.eu?subject=Kiwinet mazgo registracija : %20<%=hostname%>&amp;" 
-"body=%23%20<%=hostname%>%0A%23%20<%=sysconfig.primary_mac%>%0Akey%20%22" 
-"<%= pubkey %>%22%3B\">pagalba@kiwinet.eu</a>." 
-"</p>"
+"<p>This is your Freifunk node's public key. The node won't be able to "
+"connect to the mesh VPN until the key has been registered on the Freifunk "
+"servers. To register, send the key together with your node's name "
+"(<em><%=pcdata(hostname)%></em>) to "
+"<a href=\"mailto:keys@alpha-centauri.freifunk.net?subject="
+"<%= urlencode('Registration: ' .. hostname) %>&amp;body="
+"<%= urlencode('# ' .. hostname .. '\n# ' .. sysconfig.primary_mac .. '\nkey ') %>"
+"%22<%= pubkey %>%22;"
+"<%= urlencode('\n\nI have taken note that the contact I entered in the ') %>"
+"<%= urlencode('node is publicly available on the Internet and can be ') %>"
+"<%= urlencode('used by any services (e.g. the meshviewer map).') %>"
+"<%= urlencode('\n\nThanks, \n\n') %>"
+"\">keys@alpha-centauri.freifunk.net</a>. Of course, your e-mail address will "
+"be treated confidentially and will not be passed on.</p>"
 "<div class=\"the-key\">"
-" # <%= hostname %>"
-" <br/>"
+" # <%= pcdata(hostname) %><br />"
 "<%= pubkey %>"
 "</div>"
+"<p>Your node <em><%= pcdata(hostname) %></em> is currently rebooting and will "
+"try to connect to other nearby Freifunk nodes via WLAN and to a VPN-gateway "
+"via your internet connection after the reboot is finished.</p>"
+"<p>Don't forget to plug the network cable from the LAN port to the WAN port."
+"</p>"
 
+msgid "gluon-config-mode:novpn"
+msgstr ""
+"<p>You have selected <strong>not</strong> to use the mesh VPN. "
+"Your node will only be able to connect to the Freifunk network if other nodes "
+"in reach already have a connection.</p>"
+"Please send an e-mail with the name of your node "
+"(<em><%=pcdata(hostname)%></em>) and some additional information to "
+"<a href=\"mailto:keys@alpha-centauri.freifunk.net?subject="
+"<%= urlencode('Registration: ' .. hostname) %>&amp;body="
+"<%= urlencode('# ' .. hostname .. '\n# ' .. sysconfig.primary_mac .. '\nkey ') %>"
+"%22<%= pubkey %>%22;"
+"<%= urlencode('\n\nI have taken note that the contact I entered in the ') %>"
+"<%= urlencode('node is publicly available on the Internet and can be ') %>"
+"<%= urlencode('used by any services (e.g. the meshviewer map).') %>"
+"<%= urlencode('\n\nThanks, \n\n') %>"
+"\">keys@alpha-centauri.freifunk.net</a>. Of course, your e-mail address will "
+"be treated confidentially and will not be passed on.</p>"
+"<p>Your node <em><%= pcdata(hostname) %></em> is currently rebooting and will "
+"try to connect to other nearby Freifunk nodes after that.</p>"
 
 msgid "gluon-config-mode:reboot"
 msgstr ""
-"<p>Mazgas šiuo metu persikrauna ir po to bandys prisijungti prie kitų, " 
-"šalia ęsančių, Kiwinet tinklo mazgų ar/ar prie Kiwinet tinklo VPN serverio. " 
-"Daugiau informacijos apie Kiwinet tinklo bendruomenę rasite " 
-"<a href=\"https://wiki.kiwinet.eu/\">mūsų pagrindiniame wiki puslapyje</a>.</p>" 
-"<p>Jei norėsite grįžti prie šios konfigūracijos sąsajos, paspauskite ir 5 sekundės " 
-"laikykite nuspausta reset mygtuką. Prietaisas persikraus į configuravimo " 
-"režimą.</p>" 
-"<p>Kilus klausimams ar tinklo gedimui rašykite adresu "
-"<a href=\"mailto:pagalba@kiwinet.eu?subject=Kiwinet tinklo GEDIMO registracija : %20<%=hostname%>&amp;" 
-"body=%23%20<%=hostname%>%0A%23%20<%=sysconfig.primary_mac%>%0A%20" 
-"%3B\">pagalba@kiwinet.eu</a>."</p>" 
-"<p>Linkime smagių akimirkų naudojantis Kiwinet tinklu!</p>" 
+"<p>For more information about the Freifunk community on Alpha Centauri, have a "
+"look at <a href=\"https://alpha-centauri.freifunk.net/\" target=\"_blank\">our "
+"homepage</a>.</p>"
+"<p>To get back to this configuration interface, press the reset button for "
+"about 10 seconds during normal operation. The device will then reboot into "
+"config mode.</p>"
+"<p>Have fun with your node and exploring of the Freifunk network!</p>"
+
+# Leave empty to use the default text, which can be found in:
+# package/gluon-config-mode-hostname/i18n/
+msgid "gluon-config-mode:hostname-help"
+msgstr ""
+
+# Leave empty to use the default text, which can be found in:
+# package/gluon-config-mode-geo-location/i18n/
+msgid "gluon-config-mode:geo-location-help"
+msgstr ""
+
+msgid "gluon-config-mode:altitude-label"
+msgstr ""
+
+# Leave empty to use the default text, which can be found in:
+# package/gluon-config-mode-contact-info/i18n/
+msgid "gluon-config-mode:contact-help"
+msgstr ""
+
+msgid "gluon-config-mode:contact-note"
+msgstr ""
