Changes for gluon v2022.1.x

--- a/i18n/lt.po
+++ b/i18n/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-03-25 22:48+0200\n"
+"PO-Revision-Date: 2022-11-22 20:59+0200\n"
 "Last-Translator: Andrej Sidorenko <info@kiwinet.eu>\n"
 "Language-Team: Lithuanian\n"
 "Language: lt\n"
@@ -26,13 +26,13 @@ msgstr ""
 
 msgid "gluon-config-mode:pubkey"
 msgstr ""
-"<p>Tai jūsų Kiwinet mazgo viešasis raktas. Mazgas negalės "
-"prisijungti prie mesh VPN, kol raktas nebus užregistruotas Kiwinet "
+"<p>Tai jūsų Kiwinet mazgo viešasis raktas. Mazgas negalės tiesiogiai "
+"prisijungti prie internet tinklo, kol raktas nebus užregistruotas Kiwinet "
 "Tinklo serveryje. "
 "Norėdami užsiregistruoti, siųskite raktą kartu su savo mazgo vardu (<em><%=pcdata(hostname)%></em>) adresu "
-"<a href=\"mailto:keys@kiwinet.eu?subject=Registracija:%20<%=pcdata(hostname)%>&amp;"
+"<a href=\"mailto:info@kiwinet.eu?subject=Registracija:%20<%=pcdata(hostname)%>&amp;"
 "body=%23%20<%=pcdata(hostname)%>%0A%23%20<%=pcdata(sysconfig.primary_mac)%>%0Akey%20%22"
-"<%=pcdata(pubkey)%>%22%3B\">keys@kiwinet.eu</a>."
+"<%=pcdata(pubkey)%>%22%3B\">info@kiwinet.eu</a>."
 "</p>"
 "<div class=\"the-key\">"
 " # <%=pcdata(hostname)%>"
@@ -46,12 +46,12 @@ msgstr ""
 
 msgid "gluon-config-mode:novpn"
 msgstr ""
-"<p>Jūs pasirinkote <strong> nenaudoti </strong> ryšio per "KiwiNET" VPN serverį. "
+"<p>Jūs pasirinkote <strong> nenaudoti </strong> interneto ryšio per "KiwiNET" serverį. "
 "Jūsų mazgas galės prisijungti prie „KiwiNET“ tinklo tik tuo atveju, jei "
 "netoliese bus kitų mazgų turinčių interneto ryšį ar prisijungusių prie kitų tinklo mazgų.</p> "
 "Prašome atsiųsti el. laišką su savo mazgo pavadinimu "
 "(<em><%=pcdata(hostname)%></em>) ir šiek tiek papildomos informacijos adresu "
-"<a href=\"mailto:keys@kiwinet.eu?subject="
+"<a href=\"mailto:info@kiwinet.eu?subject="
 "<%= urlencode('Registracija: ' .. hostname) %>&amp;body="
 "<%= urlencode('# ' .. hostname .. '\n# ' .. sysconfig.primary_mac .. '\nkey ') %>"
 "%22<%= pubkey %>%22;"
@@ -59,7 +59,7 @@ msgstr ""
 "<%= urlencode('į mazgą yra viešai matomas internete ir gali būti ') %>"
 "<%= urlencode('naudojama bet kuria tinklo tarnyba (pvz. „meshviewer“ žemėlapis).') %>"
 "<%= urlencode('\n\nDėkoju, \n\n') %>"
-"\">keys@kiwinet.eu</a>. Žinoma, jūsų el. pašto adresas bus "
+"\">info@kiwinet.eu</a>. Žinoma, jūsų el. pašto adresas bus "
 "bus laikomas konfidencialiai ir nebus perduotas jokiai trečiai šaliai.</p>"
 "<p>Jūsų mazgas <em><%= pcdata(hostname) %></em> bus paleistas iš naujo ir bandys "
 "prisijungti prie kitų netoliese esančių „KiwiNET" mazgų per WLAN .</p>"
@@ -73,7 +73,7 @@ msgstr ""
 "<p>Jei norėsite grįžti prie šios konfigūracijos sąsajos, paspauskite ir 10 sekundžių "
 "laikykite nuspausta reset mygtuką. Mazgas persikraus į configuravimo "
 "režimą.</p>"
-"<p>Linkime smagių akimirkų naudojantis Jūsų naujoju "KiwiNET" tinklo mazgu!</p>"
+"<p>Linkime smagių akimirkų naudojantis "KiwiNET" tinklu!</p>"
 
 # Leave empty to use the default text, which can be found in:
 # package/gluon-config-mode-hostname/i18n/
