fix in lt trans

--- a/i18n/lt.po
+++ b/i18n/lt.po
@@ -40,13 +40,13 @@ msgstr ""
 "<%=pcdata(pubkey)%>"
 "</div>"
 "<p>Jūsų mazgas <em> <%=pcdata(hostname)%></em> bus paleistas iš naujo ir bandys "
-"prisijungti prie kitų netoliese esančių „KiwiNET" mazgų per WLAN ir prie VPN serverio "
+"prisijungti prie kitų netoliese esančių KiwiNET mazgų per WLAN ir prie VPN serverio "
 "per interneto ryšį.</p>"
 "<p>Nepamirškite prijungti tinklo kabelį į WAN prievadą. </p>"
 
 msgid "gluon-config-mode:novpn"
 msgstr ""
-"<p>Jūs pasirinkote <strong> nenaudoti </strong> interneto ryšio per "KiwiNET" serverį. "
+"<p>Jūs pasirinkote <strong> nenaudoti </strong> interneto ryšio per KiwiNET serverį. "
 "Jūsų mazgas galės prisijungti prie „KiwiNET“ tinklo tik tuo atveju, jei "
 "netoliese bus kitų mazgų turinčių interneto ryšį ar prisijungusių prie kitų tinklo mazgų.</p> "
 "Prašome atsiųsti el. laišką su savo mazgo pavadinimu "
@@ -62,18 +62,18 @@ msgstr ""
 "\">info@kiwinet.eu</a>. Žinoma, jūsų el. pašto adresas bus "
 "bus laikomas konfidencialiai ir nebus perduotas jokiai trečiai šaliai.</p>"
 "<p>Jūsų mazgas <em><%= pcdata(hostname) %></em> bus paleistas iš naujo ir bandys "
-"prisijungti prie kitų netoliese esančių „KiwiNET" mazgų per WLAN .</p>"
+"prisijungti prie kitų netoliese esančių KiwiNET mazgų per WLAN .</p>"
 
 msgid "gluon-config-mode:reboot"
 msgstr ""
 "<p>Mazgas šiuo metu persikrauna ir po to bandys prisijungti prie kitų, "
-"šalia ęsančių "KiwiNET" tinklo mazgų. "
-"Daugiau informacijos apie "KiwiNET" bendruomenę rasite "
+"šalia ęsančių KiwiNET tinklo mazgų. "
+"Daugiau informacijos apie KiwiNET bendruomenę rasite "
 "<a href=\"https://www.kiwinet.eu/\">mūsų pagrindiniame puslapyje www.kiwinet.eu</a>.</p>"
 "<p>Jei norėsite grįžti prie šios konfigūracijos sąsajos, paspauskite ir 10 sekundžių "
 "laikykite nuspausta reset mygtuką. Mazgas persikraus į configuravimo "
 "režimą.</p>"
-"<p>Linkime smagių akimirkų naudojantis "KiwiNET" tinklu!</p>"
+"<p>Linkime smagių akimirkų naudojantis KiwiNET tinklu!</p>"
 
 # Leave empty to use the default text, which can be found in:
 # package/gluon-config-mode-hostname/i18n/
